--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="indexgrade">
 <div class="header">
-<img class="serch" style="float: left; height: 50px;" href="Veg_Logo.png">
+<img class="serch" style="float: left; height: 50px;" href="VegLogo.png">
   <a class="button" href="index.html">
   <h1 class="fooddd" id="head">Food For You</h1> </a>
   <!-- Load icon library -->
