--- a/XinLin.html
+++ b/XinLin.html
@@ -47,18 +47,18 @@
   <div class="menu" id="size">
   <h3>Menu</h3>
   <ul> 
-  <li> Spring Rolls</li>
-  <li> Dumplings</li>
-  <li> Soup </li>
-  <li style="margin-left:2em"> Hot and Sour Soup</li>
-  <li style="margin-left:2em"> Corn Soup </li>
+  <li> Spring Rolls (VJ)</li>
+  <li> Dumplings (VJ)</li>
+  <li> Soup (VJ)</li>
+  <li style="margin-left:2em"> Hot and Sour Soup (VJ)</li>
+  <li style="margin-left:2em"> Corn Soup (VJ)</li>
   <li> Bread</li>
-  <li style="margin-left:2em"> Fried Bread</li>
-  <li style="margin-left:2em"> Steamed Bread</li>
-  <li> Lettuce Wrap</li>
-  <li> Mabo Tofu</li>
-  <li> Tan Tan Noodles</li>
-  <li> Hakka Noodle</li>
+  <li style="margin-left:2em"> Fried Bread (VJ)</li>
+  <li style="margin-left:2em"> Steamed Bread (VJ)</li>
+  <li> Lettuce Wrap (VJ)</li>
+  <li> Mabo Tofu (VJ)</li>
+  <li> Tan Tan Noodles (VJ)</li>
+  <li> Hakka Noodle (VJ)</li>
   </ul>
   </div>
 
