--- a/XinLin.html
+++ b/XinLin.html
@@ -6,6 +6,12 @@
   <meta name="viewport" content="width=device-width">
   <title>Xin Lin</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
+  <script src=
+"https://kit.fontawesome.com/704ff50790.js"
+            crossorigin="anonymous">
+    </script>
+ 
+    <script src="index.js"></script>
 </head>
 
 <body style="background-color: black">
@@ -28,6 +34,36 @@
 
   <h2 class="IR">Chinese Restraunts</h2>
   
+  <div class="main_box">
+    <input type="checkbox" id="share_button">
+    <label for="share_button">
+        <span class="sharebtn">
+            <i class="far fa-share-square"></i>
+        </span>
+    </label>
+
+    <div class="sm_list">
+        <a href="#" class="facebook">
+            <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#" class="instagram">
+            <i class="fab fa-instagram"></i>
+        </a>
+        <a href="#" class="linkedin">
+            <i class="fab fa-linkedin-in"></i>
+        </a>
+        <a href="#" class="discord">
+            <i class="fab fa-discord"></i>
+        </a>
+        <a href="#" class="whatsapp">
+            <i class="fab fa-whatsapp"></i>
+        </a>
+        <a href="#" class="slack">
+            <i class="fab fa-slack"></i>
+        </a>
+    </div>
+</div>
+
   <hr>
 <div class="Xin Lin">
     <img class="SpImage" src="Xinlin.jpg">
@@ -49,7 +85,7 @@
   <ul> 
   <li> Spring Rolls (VJ)</li>
   <li> Dumplings (VJ)</li>
-  <li> Soup (VJ)</li>
+  <li> Soup</li>
   <li style="margin-left:2em"> Hot and Sour Soup (VJ)</li>
   <li style="margin-left:2em"> Corn Soup (VJ)</li>
   <li> Bread</li>
