--- a/XinLin.html
+++ b/XinLin.html
@@ -34,35 +34,26 @@
 
   <h2 class="IR">Chinese Restraunts</h2>
   
-  <div class="main_box">
-    <input type="checkbox" id="share_button">
-    <label for="share_button">
-        <span class="sharebtn">
-            <i class="far fa-share-square"></i>
-        </span>
-    </label>
-
-    <div class="sm_list">
-        <a href="#" class="facebook">
-            <i class="fab fa-facebook-f"></i>
-        </a>
-        <a href="#" class="instagram">
-            <i class="fab fa-instagram"></i>
-        </a>
-        <a href="#" class="linkedin">
-            <i class="fab fa-linkedin-in"></i>
-        </a>
-        <a href="#" class="discord">
-            <i class="fab fa-discord"></i>
-        </a>
-        <a href="#" class="whatsapp">
-            <i class="fab fa-whatsapp"></i>
-        </a>
-        <a href="#" class="slack">
-            <i class="fab fa-slack"></i>
-        </a>
-    </div>
-</div>
+  <div class="share-buttons">
+    <button class="share-button facebook">
+       <i class="fab fa-facebook-f"></i>
+    </button>
+    <button class="share-button twitter">
+       <i class="fab fa-twitter"></i>
+    </button>
+    <button class="share-button linkedin">
+       <i class="fab fa-linkedin-in"></i>
+    </button>
+    <button class="share-button pinterest">
+       <i class="fab fa-pinterest"></i>
+    </button>
+    <button class="share-button reddit">
+       <i class="fab fa-reddit-alien"></i>
+    </button>
+    <button class="share-button whatsapp">
+       <i class="fab fa-whatsapp"></i>
+    </button>
+ </div>
 
   <hr>
 <div class="Xin Lin">
