--- a/XinLin.html
+++ b/XinLin.html
@@ -6,12 +6,10 @@
   <meta name="viewport" content="width=device-width">
   <title>Xin Lin</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
-  <script src=
-"https://kit.fontawesome.com/704ff50790.js"
-            crossorigin="anonymous">
-    </script>
- 
-    <script src="index.js"></script>
+  <script src="https://kit.fontawesome.com/704ff50790.js" 
+         crossorigin="anonymous">
+      </script>
+      <script src="index.js"></script>
 </head>
 
 <body style="background-color: black">
