--- a/XinLin.html
+++ b/XinLin.html
@@ -32,22 +32,24 @@
 
   <h2 class="IR">Chinese Restraunts</h2>
   
-  <div class="shareit">
-    <!-- facebook -->
-    <a class="facebook" href="https://www.facebook.com/sharer/sharer.php?u=YOUR_URL" target="blank" title="facebook"><i class="fa fa-facebook"></i></a>
-
-    <!-- twitter -->
-    <a class="twitter" href="https://twitter.com/intent/tweet?text=YOUR_TITLE&url=YOUR_URL" target="blank" title="twitter"><i class="fa fa-twitter"></i></a>
-
-    <!-- linkedin -->
-    <a class="whatsapp" href="https://api.whatsapp.com/send?text=https://www.code2night.com/" target="blank" title="whatsapp"><i class="fa fa-whatsapp"></i></a>
-
-    <!-- reddit -->
-    <a class="reddit" href="https://www.reddit.com/submit?url=YOUR_URL&title=YOUR_TITLE" target="blank" title="reddit"><i class="fa fa-reddit"></i></a>
-
-    <!-- pinterest -->
-    <a class="pinterest" href="https://pinterest.com/pin/create/button/?url=YOUR_URL&media=IMAGE_URL&description=YOUR_TITLE" target="blank" title="pinterest"><i class="fa fa-pinterest-p"></i></a>
-  </div>
+  
+  <div class="share-buttons">
+    <a href=""> <button class="share-button facebook">
+       <i class="fab fa-facebook-f"></i>
+    </button> </a>
+    <a href=""> <button class="share-button twitter">
+       <i class="fab fa-twitter"></i>
+    </button> </a>
+    <a href=""> <button class="share-button pinterest">
+       <i class="fab fa-pinterest"></i>
+        </button> </a>
+    <a href=""> <button class="share-button reddit">
+       <i class="fab fa-reddit-alien"></i>
+    </button> </a> 
+    <a href=""> <button class="share-button whatsapp">
+       <i class="fab fa-whatsapp"></i>
+    </button> </a>
+ </div> -->
 
   <hr>
 <div class="Xin Lin">
