--- a/Gaudante.html
+++ b/Gaudante.html
@@ -43,21 +43,21 @@
   <div class="menu" id="size">
   <h3>Menu</h3>
   <ul> 
-  <li> Minestrone Soup</li>
-  <li> Pumpkin Risotto</li>
+  <li> Minestrone Soup (VJ)</li>
+  <li> Pumpkin Risotto (VJ)</li>
   <li> Salad</li>
-  <li style="margin-left:2em"> Caprese</li>
-  <li style="margin-left:2em"> Green</li>
+  <li style="margin-left:2em"> Caprese (VJ)</li>
+  <li style="margin-left:2em"> Green Salad (VJ)</li>
   <li> Pasta </li>
-  <li style="margin-left:2em"> Arrabiata</li>
-  <li style="margin-left:2em"> Rose</li>
-  <li> Margarita Pizza</li>
+  <li style="margin-left:2em"> Arrabiata Pasta (VJ)</li>
+  <li style="margin-left:2em"> Rose Pasta (VJ)/li>
+  <li> Margarita Pizza (VJ)</li>
   </ul>
   </div>
 
   <div class="Info" id="size" style="margin-left: 6px;">
   <h3>Location</h3>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3281.0289226207337!2d135.1848199!3d34.6792195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008f0080bd0ce7%3A0x3bb757c92da9a885!2sOsteria%20Gaudente!5e0!3m2!1sen!2sjp!4v1691941939885!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
+  <iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419921.8637759134!2d135.0123450735155!3d34.68904537239304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008f0080bd0ce7%3A0x3bb757c92da9a885!2sOsteria%20Gaudente!5e0!3m2!1sen!2sjp!4v1692023300046!5m2!1sen!2sjp'onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+'px';}(this));' style='height:200px;width:100%;border:none;overflow:hidden;'></iframe>
   <div>
   <br>
   <h3>Links</h3>
