--- a/Gaudante.html
+++ b/Gaudante.html
@@ -26,7 +26,7 @@
 
 <div class="sizing" id="restaraunt">
 <div class="Xin Lin">
-    <img class="SpImage" src="Xinlin.jpg">
+    <img class="SpImage" src="Gaudente.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Gaudente</h2>
     <p> 〒650-0044 兵庫県神戸市中央区東川崎町１丁目６−1 神戸ハーバーランドumie モザイク 3F</p>
@@ -50,7 +50,7 @@
   <li style="margin-left:2em"> Green Salad (VJ)</li>
   <li> Pasta </li>
   <li style="margin-left:2em"> Arrabiata Pasta (VJ)</li>
-  <li style="margin-left:2em"> Rose Pasta (VJ)/li>
+  <li style="margin-left:2em"> Rose Pasta (VJ)</li>
   <li> Margarita Pizza (VJ)</li>
   </ul>
   </div>
