--- a/indian.html
+++ b/indian.html
@@ -30,7 +30,7 @@
   <div class="index">
     <a href="Aarti.html">
       <div class="box">
-    <img class="italian" src="IMG_2490.jpg">
+    <img class="italian" src="Aarti.jpg">
     <div class="Info">
     <h2>Aarti Kitano</h2>
     <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１４−１３ ハンタービル1F ハンタービル</p>
@@ -47,7 +47,7 @@
   <div class="index">
     <a href="Kusum.html">
       <div class="box">
-    <img class="italian" src="Laranceto.jpg"%>
+    <img class="italian" src="Kusum.jpg"%>
     <div class="Info">
       <h2>Kusum</h2>
       <p> 〒650-0003 兵庫県神戸市中央区山本通２丁目１２−２１ 203</p>
@@ -64,12 +64,14 @@
   <div class="index">
     <a href="Raja.html">
       <div class="box">
-    <img class="italian" src="Mona Lisa.jpg"%>
+    <img class="italian" src="Raja.jpg"%>
     <div class="Info">
       <h2>Raja</h2>
       <p> 〒650-0023 兵庫県神戸市中央区栄町通２丁目７−４</p>
       <br>
       <p> Open 11:30am to 3pm & 5pm to 9:30pm</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -81,12 +83,14 @@
   <div class="index">
     <a href="IC.html">
       <div class="box">
-    <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
+    <img class="italian" src="IC.jpg"%>
     <div class="Info">
       <h2>The India Club</h2>
       <p> 〒650-0003 兵庫県神戸市中央区山本通１丁目７−１５</p>
       <br>
       <p> Open 11:30am to 11pm</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
