--- a/italian.html
+++ b/italian.html
@@ -32,7 +32,7 @@
 <div class="index">
   <a href="Gaudante.html">
     <div class="box">
-    <img class="italian" src="IMG_2490.jpg">
+    <img class="italian" src="Gaudente.jpg">
     <div class="Info">
     <h2>Gaudente</h2>
     <p> 〒650-0044 兵庫県神戸市中央区東川崎町１丁目６−1 神戸ハーバーランドumie モザイク 3F</p>
@@ -55,6 +55,8 @@
       <p> 〒650-0002 兵庫県神戸市中央区北野町４丁目９ 14 地下1階</p>
       <br>
       <p> Open 12pm to 2pm & 5pm to 9pm</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -66,7 +68,7 @@
   <div class="index">
     <a href="MonaLisa.html">
       <div class="box">
-    <img class="italian" src="Mona Lisa.jpg"%>
+    <img class="italian" src="Mona-Lisa.jpg"%>
     <div class="Info">
       <h2>Mona Lisa</h2>
       <p> 〒650-0003 兵庫県神戸市中央区山本通２丁目１３−6 Ra・Crew 北野ハンター坂</p>
@@ -83,7 +85,7 @@
   <div class="index">
     <a href="MontDor.html">
       <div class="box">
-    <img class="italian" src="Image 6-21-23 at 7.50 PM.jpg"%>
+    <img class="italian" src="Mont_Dor.jpg"%>
     <div class="Info">
       <h2>Mont Dor</h2>
       <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１７−11 シャルマン中山手</p>
@@ -106,6 +108,8 @@
       <p> 〒650-0034 兵庫県神戸市中央区京町25</p>
       <br>
       <p> Open 7am to 10 am & 12pm to 4pm & 6pm to 9pm</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -123,6 +127,8 @@
       <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目３−7 サンハイツ中山手 １階</p>
       <br>
       <p> Open 12pm to 9pm</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -134,7 +140,7 @@
   <div class="index">
     <a href="ripple.html">
       <div class="box">
-    <img class="italian" src="Ripple.jpg"%>
+    <img class="italian" src="Ripples.jpg"%>
     <div class="Info">
       <h2>Ripple</h2>
       <p> 〒650-0011 兵庫県神戸市中央区下山手通３丁目１−17 神戸マリンビル</p>
@@ -157,6 +163,8 @@
       <p> 〒650-0021 兵庫県神戸市中央区三宮町１丁目２−2 ﾀﾞｲﾜﾛｲﾈｯﾄﾎﾃﾙ2F</p>
       <br>
       <p> Open 11:30am to 3pm & 5pm to 10:30pm</p>
+      <br>
+      <p>Maps Data: Google, ©2022 The Kitchen Salvatore Cuomo 三宮</p>
       </div>
     </div>
   </a>
@@ -174,6 +182,8 @@
       <p> 〒650-0001 兵庫県神戸市中央区加納町４丁目３−14 高木ビル 1F</p>
       <br>
       <p> Open 11:30am to 3pm & 5pm to 10:30pm</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -191,6 +201,8 @@
       <p> 〒650-0002 兵庫県神戸市中央区北野町２丁目７−1 北野アーバンライフBF-C</p>
       <br>
       <p> Open 6pm to 1am</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
