--- a/japanese.html
+++ b/japanese.html
@@ -30,12 +30,14 @@
   <div class="index">
     <a href="Chokonomiyaki.html">
       <div class="box">
-    <img class="italian" src="Mona Lisa.jpg"%>
+    <img class="italian" src="Chokko.jpg"%>
     <div class="Info">
       <h2>Chokonomiyaki</h2>
       <p> 〒650-0003 兵庫県神戸市中央区山本通５丁目４−３ アールジーマンション</p>
       <br>
       <p> Open 6pm to 11pm</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -47,7 +49,7 @@
   <div class="index">
     <a href="KamonteiHig.html">
       <div class="box">
-    <img class="italian" src="IMG_2490.jpg">
+    <img class="italian" src="KamonHiga.png">
     <div class="Info">
     <h2>Kamontei Higashimon</h2>
     <p> 〒650-0004 兵庫県神戸市中央区中山手通１丁目４−１０</p>
@@ -64,12 +66,14 @@
   <div class="index">
     <a href="KamonteiHon.html">
       <div class="box">
-    <img class="italian" src="Laranceto.jpg"%>
+    <img class="italian" src="KamonHon.jpg"%>
     <div class="Info">
       <h2>Kamontei Honten</h2>
       <p> 〒650-0004 兵庫県神戸市中央区中山手通１丁目１３−７ 神戸山下ビル 1F</p>
       <br>
       <p> Open 5:30pm to 6am</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
