--- a/mexican.html
+++ b/mexican.html
@@ -49,14 +49,14 @@
   <div class="index">
     <a href="CBRokko.html">
       <div class="box">
-    <img class="italian" src="Crazy Kobe.jpg"%>
+    <img class="italian" src="Crazy Rokko.jpg"%>
     <div class="Info">
-      <h2 style="font-size: medium;">Crazy Burrito Rokko</h2>
+      <h2 style="font-size: medium;">Crazy Burrito Rokuai</h2>
       <p> 〒658-0032 兵庫県神戸市東灘区向洋町中５丁目１５ マーケットシーン 103B</p>
       <br>
       <p> Open 11am to 2pm</p>
       <br>
-      <p>Maps Data: Google, ©2020 p muutos</p>
+      <p>Maps Data: Google, ©2022 ろくあいびより</p>
       </div>
     </div>
   </a>
