--- a/thai.html
+++ b/thai.html
@@ -37,6 +37,8 @@
       <p> 〒659-0072 兵庫県芦屋市川西町４−2</p>
       <br>
       <p> Open 11:30am to 3pm & 5pm to 10:30pm (Monday Closed)</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -54,6 +56,8 @@
       <p> 〒650-0004 兵庫県神戸市中央区中山手通５丁目１−21</p>
       <br>
       <p> Open 12am to 2pm & 5pm to 9pm (Monday Closed)</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -71,6 +75,8 @@
       <p> 〒650-0012 兵庫県神戸市中央区北長狭通１丁目８−8 しんせい堂ビル</p>
       <br>
       <p> Open 11:30am to 2pm & 5pm to 10pm (Monday Closed)</p>
+      <br>
+      <p>Maps Data: Google, ©2023</p>
       </div>
     </div>
   </a>
@@ -78,7 +84,7 @@
 
   <div class="space">
     <hr> </div>
-    
+
 </body>
 
 </html>
