--- a/italian.html
+++ b/italian.html
@@ -158,7 +158,7 @@
     <a href="salvatore.html">
       <div class="box">
     <img class="italian" src="Salvatore.jpg"%>
-    <div class="Info">
+    <div class="Info" id="Salvatore">
       <h2>Salvatore</h2>
       <p> 〒650-0021 兵庫県神戸市中央区三宮町１丁目２−2 ﾀﾞｲﾜﾛｲﾈｯﾄﾎﾃﾙ2F</p>
       <br>
