--- a/mexican.html
+++ b/mexican.html
@@ -31,7 +31,7 @@
     <a href="CBSannno.html">
       <div class="box">
     <img class="italian" src="Crazy Kobe.jpg">
-    <div class="Info">
+    <div class="Info" id="97">
     <h2>Crazy Burrito Kobe</h2>
     <p> 〒651-0096 兵庫県神戸市中央区雲井通３丁目６−９ 華</p>
     <br>
@@ -50,7 +50,7 @@
     <a href="CBRokko.html">
       <div class="box">
     <img class="italian" src="Crazy Rokko.jpg"%>
-    <div class="Info">
+    <div class="Info" id="97">
       <h2 style="font-size: medium;">Crazy Burrito Rokuai</h2>
       <p> 〒658-0032 兵庫県神戸市東灘区向洋町中５丁目１５ マーケットシーン 103B</p>
       <br>
