--- a/Laranceto.html
+++ b/Laranceto.html
@@ -25,13 +25,16 @@
 </div>
 
 <div class="sizing" id="restaraunt">
-<div class="Xin Lin">
-    <img class="SpImage" src="Xinlin.jpg">
+<div>
+    <img class="SpImage" src="Laranceto.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Laranceto</h2>
     <p>〒650-0002 兵庫県神戸市中央区北野町４丁目９ 14 地下1階</p>
     <br>
-    <p> Open 12pm to 2pm & 5pm to 9pm</p>    </div>
+    <p> Open 12pm to 2pm & 5pm to 9pm</p>
+    <br>
+    <p>Maps Data: Google, ©2023</p>
+    </div>
   </div>
 
 <div class="menuspace">
