--- a/Gaudante.html
+++ b/Gaudante.html
@@ -25,6 +25,11 @@
 </div>
 
 <div class="sizing" id="restaraunt">
+
+  <h2 class="IR">Italian Restraunts</h2>
+
+  <hr>
+  
 <div class="Xin Lin">
     <img class="SpImage" src="Gaudente.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
