--- a/Laranceto.html
+++ b/Laranceto.html
@@ -25,6 +25,11 @@
 </div>
 
 <div class="sizing" id="restaraunt">
+
+  <h2 class="IR">Italian Restraunts</h2>
+
+  <hr>
+  
 <div>
     <img class="SpImage" src="Laranceto.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
