--- a/XinLin.html
+++ b/XinLin.html
@@ -32,24 +32,29 @@
 
   <h2 class="IR">Chinese Restraunts</h2>
   
-  
-  <div class="share-buttons">
-    <a href=""> <button class="share-button facebook">
-       <i class="fab fa-facebook-f"></i>
-    </button> </a>
-    <a href=""> <button class="share-button twitter">
-       <i class="fab fa-twitter"></i>
-    </button> </a>
-    <a href=""> <button class="share-button pinterest">
-       <i class="fab fa-pinterest"></i>
-        </button> </a>
-    <a href=""> <button class="share-button reddit">
-       <i class="fab fa-reddit-alien"></i>
-    </button> </a> 
-    <a href=""> <button class="share-button whatsapp">
-       <i class="fab fa-whatsapp"></i>
-    </button> </a>
- </div> -->
+  <div class="main_box">
+    
+    <div class="sm_list" style="margin-left: 5px;">
+        <a href="https://www.facebook.com/sharer/sharer.php?u=YOUR_URL" https:="" www.facebook.com="" sharer="">
+            <i class="fab fa-facebook-f" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="instagram">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="linkedin">
+            <i class="fab fa-linkedin-in" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="discord">
+            <i class="fab fa-discord" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="whatsapp">
+            <i class="fab fa-whatsapp" aria-hidden="true"></i>
+        </a>
+        <a href="#" class="slack">
+            <i class="fab fa-slack" aria-hidden="true"></i>
+        </a>
+    </div>
+</div>
 
   <hr>
 <div class="Xin Lin">
