--- a/salvatore.html
+++ b/salvatore.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Laranceto</title>
+  <title>Salvatore</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -25,6 +25,11 @@
 </div>
 
 <div class="sizing" id="restaraunt">
+
+  <h2 class="IR">Italian Restraunts</h2>
+
+  <hr>
+  
 <div>
     <img class="SpImage" src="Salvatore.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
@@ -56,8 +61,7 @@
 
   <div class="Info" id="size" style="margin-left: 6px;">
   <h3>Location</h3>
-  <iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419921.8637759134!2d135.0123450735155!3d34.68904537239304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008f0080bd0ce7%3A0x3bb757c92da9a885!2sOsteria%20Gaudente!5e0!3m2!1sen!2sjp!4v1692023300046!5m2!1sen!2sjp'onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+'px';}(this));' style='height:200px;width:100%;border:none;overflow:hidden;'></iframe>  <br>
-  <h3>Links</h3>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.592893220888!2d135.18801688537832!3d34.69022290310834!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008f339127fc03%3A0x9763ec62b660554b!2sThe%20Kitchen%20Salvatore%20Cuomo%20%E4%B8%89%E5%AE%AE!5e0!3m2!1sen!2sjp!4v1692083112933!5m2!1sen!2sjp" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>  <h3>Links</h3>
   <a href="kitchensalvatore.jp" class="link"><p>kitchensalvatore.jp</p></a>
   <a href="tel:078-335-6539" class=link><p>078-335-6539</p></a>
   <a href="https://maps.app.goo.gl/4kti5mFf1PwYRTfW6?g_st=ic" class="link"><p>Google Maps</p></a>
