--- a/Laranceto.html
+++ b/Laranceto.html
@@ -62,7 +62,8 @@
 
   <div class="Info" id="size" style="margin-left: 6px;">
   <h3>Location</h3>
-  <iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419921.8637759134!2d135.0123450735155!3d34.68904537239304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008f0080bd0ce7%3A0x3bb757c92da9a885!2sOsteria%20Gaudente!5e0!3m2!1sen!2sjp!4v1692023300046!5m2!1sen!2sjp'onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+'px';}(this));' style='height:200px;width:100%;border:none;overflow:hidden;'></iframe>  <div>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.2544419530454!2d135.18434407594088!3d34.69876177292037!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee6d3740407%3A0x7b8e3635d982b9b7!2z44Ki44Op44Oz44OB44Kn44O844OI!5e0!3m2!1sen!2sjp!4v1692108203991!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
+  <div>
   <br>
   <h3>Links</h3>
   <a href="laranceto.jimdo.com" class="link"><p>laranceto.jimdo.com</p></a>
@@ -71,6 +72,7 @@
 </div>
 </div>
 </div>
+<p class="footer">VJ = Vegetarian/Jain Option. V = Vegetarian</p>
 </div>
 </body>
 
