--- a/MonaLisa.html
+++ b/MonaLisa.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mont Dor</title>
+  <title>Mona Lisa</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src="Mona-Lisa.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Mona Lisa</h2>
       <p> 〒650-0003 兵庫県神戸市中央区山本通２丁目１３−6 Ra・Crew 北野ハンター坂</p>
@@ -48,18 +48,8 @@
   <div class="menu" id="size">
   <h3>Menu</h3>
   <ul> 
-  <li>Marinara (V)</li>
-  <li>Calzone (VJ)</li>
-  <li>Salad</li>
-  <li style="margin-left:2em">Green (VJ)</li>
-  <li style="margin-left:2em">Caprese (VJ)</li>
-  <li style="margin-left:2em">Eggplant Gratin(V)</li>
-  <li>Pasta</li>
-  <li style="margin-left:2em">Rose Pasta (VJ)</li>
-  <li style="margin-left:2em">Gorgonzola (V)</li>
-  <li>Pizza</li>
-  <li style="margin-left:2em">Salad Pizza (VJ)</li>
-  <li style="margin-left:2em">Margarita Pizza (VJ)</li>
+  <li>Rose Pasta (VJ)</li>
+  <li>Margarita Pizza (VJ)</li>
   </ul>
   </div>
 
@@ -69,9 +59,9 @@
   <div>
   <br>
   <h3>Links</h3>
-  <a href="https://m.facebook.com/pizzeriamontdor" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
-  <a href="tel:078-291-0811" class=link><p>078-291-0811</p></a>
-  <a href="https://maps.app.goo.gl/wKfCGqsRwF5UfUbY8?g_st=ic" class="link"><p>Google Maps</p></a>
+  <a href="monalisa.kuchikomi-kobe.com" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
+  <a href="tel:078-251-1526" class=link><p>078-251-1526</p></a>
+  <a href="https://maps.app.goo.gl/dmpEoesz2VB7QzGAA?g_st=ic" class="link"><p>Google Maps</p></a>
 </div>
 </div>
 </div>
