--- a/VinVino.html
+++ b/VinVino.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mont Dor</title>
+  <title>Vin Vino</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src="Vin Vino.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Vin Vino</h2>
       <p> 〒650-0002 兵庫県神戸市中央区北野町２丁目７−1 北野アーバンライフBF-C</p>
@@ -50,18 +50,8 @@
   <div class="menu" id="size">
   <h3>Menu</h3>
   <ul> 
-  <li>Marinara (V)</li>
-  <li>Calzone (VJ)</li>
-  <li>Salad</li>
-  <li style="margin-left:2em">Green (VJ)</li>
-  <li style="margin-left:2em">Caprese (VJ)</li>
-  <li style="margin-left:2em">Eggplant Gratin(V)</li>
-  <li>Pasta</li>
-  <li style="margin-left:2em">Rose Pasta (VJ)</li>
-  <li style="margin-left:2em">Gorgonzola (V)</li>
-  <li>Pizza</li>
-  <li style="margin-left:2em">Salad Pizza (VJ)</li>
-  <li style="margin-left:2em">Margarita Pizza (VJ)</li>
+  <li>Rose Pasta (VJ)</li>
+  <li>Margarita Pizza (VJ)</li>
   </ul>
   </div>
 
@@ -71,9 +61,9 @@
   <br>
   <h3>Links</h3>
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13121.017996059985!2d135.1743232973097!3d34.69876033344535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee0bb9b8e69%3A0xc448cd11110fe91d!2sVinVino!5e0!3m2!1sen!2sjp!4v1692106622672!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
-  <a href="https://m.facebook.com/pizzeriamontdor" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
-  <a href="tel:078-291-0811" class=link><p>078-291-0811</p></a>
-  <a href="https://maps.app.goo.gl/wKfCGqsRwF5UfUbY8?g_st=ic" class="link"><p>Google Maps</p></a>
+  <a href="vinvino.gorp.jp" class="link"><p>vinvino.gorp.jp</p></a>
+  <a href="tel:050-5485-8064" class=link><p>050-5485-8064</p></a>
+  <a href="https://maps.app.goo.gl/5symS7jVG6TgKkXD8?g_st=ic" class="link"><p>Google Maps</p></a>
 </div>
 </div>
 </div>
