--- a/quarto.html
+++ b/quarto.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mont Dor</title>
+  <title>Quarto</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src="Quarto.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Quarto</h2>
       <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目３−7 サンハイツ中山手 １階</p>
@@ -50,17 +50,9 @@
   <div class="menu" id="size">
   <h3>Menu</h3>
   <ul> 
-  <li>Marinara (V)</li>
-  <li>Calzone (VJ)</li>
-  <li>Salad</li>
-  <li style="margin-left:2em">Green (VJ)</li>
-  <li style="margin-left:2em">Caprese (VJ)</li>
-  <li style="margin-left:2em">Eggplant Gratin(V)</li>
-  <li>Pasta</li>
-  <li style="margin-left:2em">Rose Pasta (VJ)</li>
-  <li style="margin-left:2em">Gorgonzola (V)</li>
+  <li>Rose Pasta (VJ)</li>
   <li>Pizza</li>
-  <li style="margin-left:2em">Salad Pizza (VJ)</li>
+  <li style="margin-left:2em">Quattro Formaggi (V)</li>
   <li style="margin-left:2em">Margarita Pizza (VJ)</li>
   </ul>
   </div>
@@ -71,9 +63,9 @@
     <div>
   <br>
   <h3>Links</h3>
-  <a href="https://m.facebook.com/pizzeriamontdor" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
-  <a href="tel:078-291-0811" class=link><p>078-291-0811</p></a>
-  <a href="https://maps.app.goo.gl/wKfCGqsRwF5UfUbY8?g_st=ic" class="link"><p>Google Maps</p></a>
+  <a href="https://s.tabelog.com/hyogo/A2801/A280101/28041401/?svd=20230803&svt=1900&svps=2&default_yoyaku_condition=1" class="link"><p>https://s.tabelog.com/hyogo/A2801/A280101/28041401/?svd=20230803&svt=1900&svps=2&default_yoyaku_condition=1</p></a>
+  <a href="tel:078-599-6332" class=link><p>078-599-6332</p></a>
+  <a href="https://maps.app.goo.gl/3ZVzwoMsihLjVS5EA?g_st=ic" class="link"><p>Google Maps</p></a>
 </div>
 </div>
 </div>
