--- a/ripple.html
+++ b/ripple.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mont Dor</title>
+  <title>Ripple</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src="Ripples.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Ripple</h2>
       <p> 〒650-0011 兵庫県神戸市中央区下山手通３丁目１−17 神戸マリンビル</p>
@@ -48,18 +48,12 @@
   <div class="menu" id="size">
   <h3>Menu</h3>
   <ul> 
-  <li>Marinara (V)</li>
-  <li>Calzone (VJ)</li>
-  <li>Salad</li>
-  <li style="margin-left:2em">Green (VJ)</li>
-  <li style="margin-left:2em">Caprese (VJ)</li>
-  <li style="margin-left:2em">Eggplant Gratin(V)</li>
-  <li>Pasta</li>
-  <li style="margin-left:2em">Rose Pasta (VJ)</li>
-  <li style="margin-left:2em">Gorgonzola (V)</li>
-  <li>Pizza</li>
-  <li style="margin-left:2em">Salad Pizza (VJ)</li>
-  <li style="margin-left:2em">Margarita Pizza (VJ)</li>
+  <li>Green Salad (V)</li>
+  <li>Corn Soup (VJ)</li>
+  <li>Rice Pilaf (VJ)</li>
+  <li>Panini Sandwich (VJ)</li>
+  <li>Rose Pasta (VJ)</li>
+  <li>Pizza Margarit (VJ)a</li>
   </ul>
   </div>
 
@@ -69,9 +63,8 @@
     <div>
   <br>
   <h3>Links</h3>
-  <a href="https://m.facebook.com/pizzeriamontdor" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
-  <a href="tel:078-291-0811" class=link><p>078-291-0811</p></a>
-  <a href="https://maps.app.goo.gl/wKfCGqsRwF5UfUbY8?g_st=ic" class="link"><p>Google Maps</p></a>
+  <a href="tel:078-331-2345" class=link><p>078-331-2345</p></a>
+  <a href="https://maps.google.com?q=Ripple,%20%E7%A5%9E%E6%88%B8%E3%83%9E%E3%83%AA%E3%83%B3%E3%83%93%E3%83%AB%203%20Chome-1-17%20Shimoyamatedori,%20Chuo%20Ward,%20Kobe,%20Hyogo%20650-0011&ftid=0x60008ee2fc634fd3:0xb6a88e38df7ae36f&hl=en-JP&gl=jp&entry=gps&lucs=,47071704&g_st=ic" class="link"><p>Google Maps</p></a>
 </div>
 </div>
 </div>
