--- a/Sienna.html
+++ b/Sienna.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mont Dor</title>
+  <title>Sienna</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src=".jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Mont Dor</h2>
     <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１７−11 シャルマン中山手</p>
