--- a/pacific.html
+++ b/pacific.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Mont Dor</title>
+  <title>Pacific</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src="Pacific.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Pacific Oriental Hotel</h2>
       <p> 〒650-0034 兵庫県神戸市中央区京町25</p>
@@ -50,18 +50,8 @@
   <div class="menu" id="size">
   <h3>Menu</h3>
   <ul> 
-  <li>Marinara (V)</li>
-  <li>Calzone (VJ)</li>
-  <li>Salad</li>
-  <li style="margin-left:2em">Green (VJ)</li>
-  <li style="margin-left:2em">Caprese (VJ)</li>
-  <li style="margin-left:2em">Eggplant Gratin(V)</li>
-  <li>Pasta</li>
-  <li style="margin-left:2em">Rose Pasta (VJ)</li>
-  <li style="margin-left:2em">Gorgonzola (V)</li>
-  <li>Pizza</li>
-  <li style="margin-left:2em">Salad Pizza (VJ)</li>
-  <li style="margin-left:2em">Margarita Pizza (VJ)</li>
+  <li>Green Salad (VJ)</li>
+  <li>Rose Pasta (VJ(</li>
   </ul>
   </div>
 
@@ -71,9 +61,9 @@
   <div>
   <br>
   <h3>Links</h3>
-  <a href="https://m.facebook.com/pizzeriamontdor" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
-  <a href="tel:078-291-0811" class=link><p>078-291-0811</p></a>
-  <a href="https://maps.app.goo.gl/wKfCGqsRwF5UfUbY8?g_st=ic" class="link"><p>Google Maps</p></a>
+  <a href="orientalhotel.jp" class="link"><p>orientalhotel.jp</p></a>
+  <a href="tel:078-326-1577" class=link><p>078-326-1577</p></a>
+  <a href="https://maps.app.goo.gl/RmDzdW51yr3UG36U9?g_st=ic" class="link"><p>Google Maps</p></a>
 </div>
 </div>
 </div>
