--- a/MontDor.html
+++ b/MontDor.html
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src="Mont_Dor.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Mont Dor</h2>
     <p> 〒650-0004 兵庫県神戸市中央区中山手通２丁目１７−11 シャルマン中山手</p>
