--- a/TanaForno.html
+++ b/TanaForno.html
@@ -31,7 +31,7 @@
   <hr>
   
 <div>
-    <img class="SpImage" src="Salvatore.jpg">
+    <img class="SpImage" src="Tana Forno.jpg">
     <div class="Info" id="size" style="margin-top: 5px;">
     <h2>Tana Forno</h2>
       <p> 〒650-0001 兵庫県神戸市中央区加納町４丁目３−14 高木ビル 1F</p>
