--- a/pacific.html
+++ b/pacific.html
@@ -51,7 +51,7 @@
   <h3>Menu</h3>
   <ul> 
   <li>Green Salad (VJ)</li>
-  <li>Rose Pasta (VJ(</li>
+  <li>Rose Pasta (VJ)</li>
   </ul>
   </div>
 
