--- a/Gaudante.html
+++ b/Gaudante.html
@@ -65,7 +65,7 @@
   <iframe src='https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d419921.8637759134!2d135.0123450735155!3d34.68904537239304!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008f0080bd0ce7%3A0x3bb757c92da9a885!2sOsteria%20Gaudente!5e0!3m2!1sen!2sjp!4v1692023300046!5m2!1sen!2sjp'onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+'px';}(this));' style='height:200px;width:100%;border:none;overflow:hidden;'></iframe>
   <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="gaudente.jp" class="link"><p>gaudente.jp</p></a>
   <a href="tel:078-360-2800" class=link><p>078-360-2800</p></a>
   <a href="https://maps.app.goo.gl/K9tambt2jxSLVUxc8?g_st=ic" class="link"><p>Google Maps</p></a>
