--- a/MonaLisa.html
+++ b/MonaLisa.html
@@ -58,7 +58,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.273769495879!2d135.1850003853806!3d34.69827420309814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee0e569e0a9%3A0x4422124143b2359c!2z44Oi44OK44Oq44K1!5e0!3m2!1sen!2sjp!4v1692106447448!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
   <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="monalisa.kuchikomi-kobe.com" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
   <a href="tel:078-251-1526" class=link><p>078-251-1526</p></a>
   <a href="https://maps.app.goo.gl/dmpEoesz2VB7QzGAA?g_st=ic" class="link"><p>Google Maps</p></a>
