--- a/MontDor.html
+++ b/MontDor.html
@@ -68,7 +68,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.336602112659!2d135.1838651853801!3d34.69668910310014!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee1a50e1fa7%3A0xa6ee007c36c18830!2zTW91bnQgZOKAmU9y!5e0!3m2!1sen!2sjp!4v1692106104099!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
   <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="https://m.facebook.com/pizzeriamontdor" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
   <a href="tel:078-291-0811" class=link><p>078-291-0811</p></a>
   <a href="https://maps.app.goo.gl/wKfCGqsRwF5UfUbY8?g_st=ic" class="link"><p>Google Maps</p></a>
