--- a/TanaForno.html
+++ b/TanaForno.html
@@ -67,7 +67,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d13121.017858656285!2d135.1743233!3d34.6987612!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee4f9dc8b37%3A0x38c51a6bacf92ee1!2sTana%20Forno!5e0!3m2!1sen!2sjp!4v1692106223038!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
   <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="kitchensalvatore.jp" class="link"><p>kitchensalvatore.jp</p></a>
   <a href="tel:078-335-6539" class=link><p>078-335-6539</p></a>
   <a href="https://maps.app.goo.gl/4kti5mFf1PwYRTfW6?g_st=ic" class="link"><p>Google Maps</p></a>
