--- a/VinVino.html
+++ b/VinVino.html
@@ -60,7 +60,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d13121.017996059985!2d135.1743232973097!3d34.69876033344535!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee0bb9b8e69%3A0xc448cd11110fe91d!2sVinVino!5e0!3m2!1sen!2sjp!4v1692106622672!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
   <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="vinvino.gorp.jp" class="link"><p>vinvino.gorp.jp</p></a>
   <a href="tel:050-5485-8064" class=link><p>050-5485-8064</p></a>
   <a href="https://maps.app.goo.gl/5symS7jVG6TgKkXD8?g_st=ic" class="link"><p>Google Maps</p></a>
