--- a/pacific.html
+++ b/pacific.html
@@ -60,7 +60,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.690710558211!2d135.18801248537764!3d34.68775470311149!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ef96139c2c9%3A0x783f981ce88a1011!2sMAIN%20DINING%20by%20THE%20HOUSE%20OF%20PACIFIC%20ORIENTAL%20HOTEL!5e0!3m2!1sen!2sjp!4v1692106480092!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
   <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="orientalhotel.jp" class="link"><p>orientalhotel.jp</p></a>
   <a href="tel:078-326-1577" class=link><p>078-326-1577</p></a>
   <a href="https://maps.app.goo.gl/RmDzdW51yr3UG36U9?g_st=ic" class="link"><p>Google Maps</p></a>
