--- a/quarto.html
+++ b/quarto.html
@@ -62,7 +62,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.4239674248834!2d135.18397758537958!3d34.69448500310293!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee231ceb1cd%3A0xf46e0d424ff4479a!2squarto!5e0!3m2!1sen!2sjp!4v1692106546128!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
     <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="https://s.tabelog.com/hyogo/A2801/A280101/28041401/?svd=20230803&svt=1900&svps=2&default_yoyaku_condition=1" class="link"><p>https://s.tabelog.com/hyogo/A2801/A280101/28041401/?svd=20230803&svt=1900&svps=2&default_yoyaku_condition=1</p></a>
   <a href="tel:078-599-6332" class=link><p>078-599-6332</p></a>
   <a href="https://maps.app.goo.gl/3ZVzwoMsihLjVS5EA?g_st=ic" class="link"><p>Google Maps</p></a>
