--- a/ripple.html
+++ b/ripple.html
@@ -62,7 +62,7 @@
   <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3280.499306743822!2d135.1841211853791!3d34.692584203105405!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60008ee2fc634fd3%3A0xb6a88e38df7ae36f!2sRipple!5e0!3m2!1sen!2sjp!4v1692106567271!5m2!1sen!2sjp" onload='javascript:(function(o){o.style.height=o.contentWindow.document.body.scrollHeight+"px";}(this));' style="height:200px;width:100%;border:none;overflow:hidden;"></iframe>
     <div>
   <br>
-  <h3>Links</h3>
+  <h3>Contact</h3>
   <a href="tel:078-331-2345" class=link><p>078-331-2345</p></a>
   <a href="https://maps.google.com?q=Ripple,%20%E7%A5%9E%E6%88%B8%E3%83%9E%E3%83%AA%E3%83%B3%E3%83%93%E3%83%AB%203%20Chome-1-17%20Shimoyamatedori,%20Chuo%20Ward,%20Kobe,%20Hyogo%20650-0011&ftid=0x60008ee2fc634fd3:0xb6a88e38df7ae36f&hl=en-JP&gl=jp&entry=gps&lucs=,47071704&g_st=ic" class="link"><p>Google Maps</p></a>
 </div>
