--- a/MonaLisa.html
+++ b/MonaLisa.html
@@ -59,7 +59,7 @@
   <div>
   <br>
   <h3>Contact</h3>
-  <a href="monalisa.kuchikomi-kobe.com" class="link"><p>https://m.facebook.com/pizzeriamontdor</p></a>
+  <a href="monalisa.kuchikomi-kobe.com" class="link"><p>monalisa.kuchikomi-kobe.com</p></a>
   <a href="tel:078-251-1526" class=link><p>078-251-1526</p></a>
   <a href="https://maps.app.goo.gl/dmpEoesz2VB7QzGAA?g_st=ic" class="link"><p>Google Maps</p></a>
 </div>
