--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="indexgrade">
 <div class="header">
-<img class="serch" style="float: left; height: 50px;" href="Screenshot 2023-08-16 at 6.28.28 PM.png">
+<img class="serch" style="float: left; height: 50px;" src="Screenshot 2023-08-16 at 6.28.28 PM.png">
   <a class="button" href="index.html">
   <h1 class="fooddd" id="head">Food For You</h1> </a>
   <!-- Load icon library -->
@@ -98,7 +98,7 @@
 				});
 			});
 		</script>
-	<p class="footer">Contact Email: 24javedy@canacad.ac.jp</p>
+	<p class="footer" style="max-width: inherit;">Contact Email: 24javedy@canacad.ac.jp</p>
 </body>
 
 </html>
