--- a/Laranceto.html
+++ b/Laranceto.html
@@ -10,6 +10,7 @@
 
 <body style="background-color: black">
 <div class="header">
+  <img class="serch" style="float: left; height: 50px;" src="Screenshot 2023-08-16 at 6.28.28 PM.png">
   <a class="button" href="index.html">
   <h1 class="fooddd">Food For You</h1> </a>
   <!-- Load icon library -->
