--- a/cuisines.html
+++ b/cuisines.html
@@ -9,6 +9,7 @@
 
 <body>
 <div class="header">
+  <img class="serch" style="float: left; height: 50px;" src="Screenshot 2023-08-16 at 6.28.28 PM.png">
   <a class="button" href="index.html">
   <h1 class="fooddd">Food For You</h1> </a>
   <!-- Load icon library -->
